Fix overflowing youtube player

--- a/style.css
+++ b/style.css
@@ -66,15 +66,11 @@ h1 {
 .post-content {
 	font-size: 1.2rem;
 	line-height: 1.5rem;
+	overflow: hidden;
 }
 
 pre {
 	overflow-x: scroll;
-}
-
-img {
-	max-width: 100%;
-	height: 100%;
 }
 
 blockquote {
@@ -88,6 +84,25 @@ blockquote {
 	text-align: right;
 }
 
+
+
+/* Responsive elements */
+img {
+	max-width: 100%;
+	height: auto;
+}
+
+span.embed-youtube {
+	position: relative;
+	padding-bottom: 56.5%
+}
+iframe.youtube-player {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+}
 
 /* Genericons */
 .screen-reader-text {
